# ChangeLog for dev-java/javacup
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Jun 2007; Alistair John Bush <ali_bush@gentoo.org>
  javacup-0.11a_beta20060608.ebuild:
  Fixed install of source zip.

  03 Jun 2007; Vlastimil Babka <caster@gentoo.org>
  javacup-0.11a_beta20060608.ebuild:
  Fix manifest, drop KEYWORDS until it compiles with java-strict.
