@@ -1,3 +1,3 @@
 DIST javacup-0.11a_beta20060608.tar.bz2 285727 RMD160 232a13874313242eb8b904267c528ca6111031f8 SHA1 1c5d6b910d8ae5889d98b101151efce857e9da7f SHA256 cb3ad4951d734bd1e5a6ff835018dea26a47564f820ae0a925f9c30f2fb7e1ff
-EBUILD javacup-0.11a_beta20060608.ebuild 1535 RMD160 9e53fc069374708114ece38266c7418d90f819f5 SHA1 0946181ec7dc0fa7a6e9d1f416fc34aaded75a93 SHA256 04fd80109deda8ad2c025b3f8b386be36db2e3e46b073067bb1682111317a7fe
+EBUILD javacup-0.11a_beta20060608.ebuild 1535 RMD160 0ccab15f9d78cc0011812ffecdeaff7de7a005c9 SHA1 86ea330938529672c8abe22b55247abcc5f77dff SHA256 6c1a2eafe5b9016e5fcbcc5f777be17338d01e94568dfd508d52da7fbf51c79d
 MISC ChangeLog 397 RMD160 d2a4ef37d542266a450dc571839bb3d99a72da21 SHA1 03a47e078836716200cbc30c71853323f7355c28 SHA256 c8e26b2735a63d9f0175ebf043618897460cce0acddb4b159dd00b0954e98116
