@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Jul 2007; Alistair John Bush <ali_bush@gentoo.org>
+  -javacup-0.11a_beta20060608.ebuild:
+  Removing javacup ebuild as in tree. leaving directory for future.
+
   13 Jun 2007; Alistair John Bush <ali_bush@gentoo.org>
   javacup-0.11a_beta20060608.ebuild:
   Fixed install of source zip.
